# polyhedra_combiner

./: .clang-format  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Contour.cpp  Contour.h  Edge.cpp  Edge.h  Face.cpp  Face.h  README.md  Solid.cpp  Solid.h  Vertex.cpp  Vertex.h  input_parser.cpp  input_parser.h  intersection.cpp  intersection.h  main.cpp
.github/workflows/: main.yml
cmake/: CatchAddTests.cmake
include/: OBJ_Loader.h  json.hpp
include/catch2/: catch.hpp
src/: BoundingBox.cpp  BoundingBox.h  Edge.cpp  Edge.h  Face.cpp  Face.h  Solid.cpp  Solid.h  Vertex.cpp  Vertex.h  input_parser.cpp  intersection.cpp  intersection.h  main.cpp  numeric.h
tests/: CMakeLists.txt  testBoundingBox.cpp  testContour.cpp  testEdge.cpp  testFace.cpp  testIntersection.cpp  testReadInput.cpp  testSolid.cpp  testVertex.cpp
tests/assets/: two_cubes.json
